# ChangeLog for dev-ruby/snmplib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/snmplib/ChangeLog,v 1.39 2012/08/14 18:57:34 flameeyes Exp $

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> snmplib-1.0.3.ebuild,
  snmplib-1.0.4.ebuild, snmplib-1.1.0.ebuild:
  Drop ia64/sparc keywords

  06 Feb 2012; Brent Baude <ranger@gentoo.org> snmplib-1.0.3.ebuild:
  Marking snmplib-1.0.3 ppc for bug 379019

*snmplib-1.1.0 (25 Dec 2011)

  25 Dec 2011; Hans de Graaff <graaff@gentoo.org> +snmplib-1.1.0.ebuild:
  Version bump.

  06 Dec 2011; Hans de Graaff <graaff@gentoo.org> -snmplib-1.0.2.ebuild:
  Remove old version.

*snmplib-1.0.4 (27 Oct 2011)

  27 Oct 2011; Hans de Graaff <graaff@gentoo.org> +snmplib-1.0.4.ebuild:
  Version bump. Add ruby19, ree18.

  28 Aug 2011; Raúl Porcel <armin76@gentoo.org> snmplib-1.0.3.ebuild:
  ia64 stable wrt #379019

  21 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> snmplib-1.0.3.ebuild:
  x86 stable wrt bug #379019

  14 Aug 2011; Markos Chandras <hwoarang@gentoo.org> snmplib-1.0.3.ebuild:
  Stable on amd64 wrt bug #379019

  13 Aug 2011; Hans de Graaff <graaff@gentoo.org> snmplib-1.0.3.ebuild:
  Whitespace.

  13 Aug 2011; Hans de Graaff <graaff@gentoo.org> snmplib-1.0.3.ebuild:
  Fix broken tests, bug 323423.

  08 Jul 2010; Hans de Graaff <graaff@gentoo.org> snmplib-1.0.3.ebuild:
  Use RUBY_FAKEGEM_NAME

*snmplib-1.0.3 (04 Jun 2010)

  04 Jun 2010; Hans de Graaff <graaff@gentoo.org> +snmplib-1.0.3.ebuild:
  Version bump.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  snmplib-1.0.2.ebuild:
  Various cleanups.

  18 Aug 2009; Alex Legler <a3li@gentoo.org> -snmplib-0.6.1.ebuild:
  Removing old version to get rid of USE_RUBY="any"

  26 Apr 2009; Brent Baude <ranger@gentoo.org> snmplib-1.0.2.ebuild: